Purple: set QC status and germline abs for empty file output